--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,21 +12,39 @@
   >
     <div class="bg-[#fff] rounded-xl shadow-lg">
       <section
-        class="bg-[#7749f8] py-5 px-[25px] text-white  h-[99px] rounded-t-xl"
+        class="bg-[#7749f8] py-5 px-[25px] text-white h-[99px] rounded-t-xl"
       >
-        <h1 class="text-2xl font-semibold mb-[5px]">My Tasks</h1>
-        <p class="text-[14px] opacity-[0.9]">Sunday, Feb 8</p>
+        <div class="flex items-center gap-2">
+          <svg
+            width="20px"
+            height="20px"
+            viewBox="0 0 24 24"
+            id="meteor-icon-kit__solid-check-circle"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill="#fefefe"
+              fill-rule="#fefefe"
+              clip-rule="evenodd"
+              d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM7.56066 10.9393L10.5 13.8787L16.4393 7.93934C17.0251 7.35355 17.9749 7.35355 18.5607 7.93934C19.1464 8.52513 19.1464 9.47487 18.5607 10.0607L11.5607 17.0607C10.9749 17.6464 10.0251 17.6464 9.43934 17.0607L5.43934 13.0607C4.85355 12.4749 4.85355 11.5251 5.43934 10.9393C6.02513 10.3536 6.97487 10.3536 7.56066 10.9393Z"
+              fill="#758CA3"
+            />
+          </svg>
+          <h1 class="text-2xl font-semibold mb-[5px]">My Tasks</h1>
+        </div>
+        <p class="text-[14px] opacity-[0.9]" id="date">Sunday, Feb 8</p>
       </section>
       <section
         class="py-5 px-[25px] bg-[#f8f9fa] border-b-[1px] border-b-[#e9ecef]"
       >
         <input
+        id="task-input"
           type="text"
           placeholder="What do you need to do?"
           class="w-[400px] h-[44px] p-3.5 text-[16px] bg-white rounded-[6px] border-[1px] border-[#dee2e6] transition-all duration-200"
         />
         <button
-          class="w-10 h-10 bg-[#7749f8] text-white rounded-[6px] mx-[5px] transition-all duration-200 cursor-pointer text-2xl font-semibold p-b-[10px] hover:bg-[#9775fa]"
+         id="button" class="w-10 h-10 bg-[#7749f8] text-white rounded-[6px] mx-[5px] transition-all duration-200 cursor-pointer text-2xl font-semibold p-b-[10px] hover:bg-[#9775fa]"
         >
           +
         </button>
@@ -38,13 +56,19 @@
         >
       </section>
       <section
-        class="w-[500px] h-[30px] border-b-[1px] border-b-[#e9ecef] py-[15px]"
-      ></section>
+        class="w-[500px] h-full border-b-[1px] border-b-[#e9ecef] py-[15px]"
+      >
+        <ul id="todo-list">
+        </ul>
+      </section>
       <section
         class="flex justify-between items-center text-[#868e96] text-[14px] font-normal rounded-b-[12px] bg-[#f8f9fa] py-4 px-6"
       >
-        <p>0 items left</p>
-        <button class="cursor-pointer  transition-all duration-200  hover:text-[#fa5252]">
+        <p id="items-left">0 items left</p>
+        <button
+        id="clean"
+           class="cursor-pointer transition-all duration-200 hover:text-[#fa5252]"
+        >
           Clear completed
         </button>
       </section>
